# AgenticPlanningLoop

./: .env.example  .gitignore  Dockerfile  README.md  api.py  decisions.md  pyproject.toml  railway.toml  requirements.txt  test_results.md
agent/: budget.py  llm.py  loop.py  main.py  prompts.py  schemas.py  tools.py
static/: index.html
tests/: test_agent.py
